--- a/reminder-app/pages/styles.css
+++ b/reminder-app/pages/styles.css
@@ -1,3 +1,4 @@
+html,
 body {
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
     'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
