--- a/reminder-app/components/Footer/footer.module.css
+++ b/reminder-app/components/Footer/footer.module.css
@@ -1,5 +1,9 @@
 .footer {
-  margin-top: 2rem;
+  width: 100%;
+  height: 100px;
+  border-top: 1px solid #eaeaea;
+  text-align: center;
+  padding-top: 30px;
 }
 
 .navItems {
